2008-06-15  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/server.rb:  Store off if we are returning Marshal
	format before running =~ again.  Fixes bug reported by Chad Wooley.
	* lib/rubygems/commands/stale_command.rb:  `gem stale` lists gems by
	last access time.  Patch #20593 by Aaron Patterson.

2008-06-09  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/dependency_installer.rb:  Only install all dependencies
	when install_dir option is set.  Don't include satisfied dependencies
	when gathering dependencies.
	* lib/rubygems/commands/query_command.rb:  Display authors, rubyforge
	and homepage urls with details.
	* lib/rubygems/commands/environment_command.rb:  Add executable
	directory (from Rubinius).
	* lib/rubygems/commands/install_command.rb:  Don't set install_dir by
	default.
	* lib/rubygems/commands/update_command.rb:  Don't set install_dir by
	default.  Use #find_missing for efficiency.

2008-06-07  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/server.rb:  Fully mirror Gem::Indexer indexes, set
	correct content-type headers, always refresh the source index.
	* lib/rubygems/source_index.rb:  Add spec_dirs so that #refresh! will
	always reload from the same locations.  #refresh! on manually-built
	SourceIndex now raises.  Fixes #20509 by Chad Woolley.

2008-06-06  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/installer.rb:  Remove previous bin_script_path in case
	it is a symlink.
	* lib/rubygems/commands/pristine_command.rb:  Force reinstallation of
	the gem using the installer.  Fixes bug #20387 by Erik Persson.
	* lib/rubygems/doc_manager.rb:  Ensure args to RDoc are all strings.
	* lib/rubygems/source_index.rb:  Use find_matching to discover updated
	specs instead of fetch.
	* lib/rubygems/commands/query_command.rb:  Platform, not name in spec
	tuples.

2008-06-05  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/local_remote_options.rb:  Ensure remote repository URLs
	reference directories.  Fixes bug #20134 by Neil Wilson.