@@ -637,7 +637,11 @@ end
   s.rubygems_version = %q{#{Gem::RubyGemsVersion}}
   s.summary = %q{this is a summary}
 
-  s.add_runtime_dependency(%q<b>, [\"= 1\"])
+  if s.respond_to? :specification_version and s.specification_version >= 3 then
+    s.add_runtime_dependency(%q<b>, [\"= 1\"])
+  else
+    s.add_dependency(%q<b>, [\"= 1\"])
+  end
 end
 "
 
@@ -660,7 +664,7 @@ end
   s.version = \"1\"
   s.platform = Gem::Platform.new(#{expected_platform})
 
-  s.specification_version = 2 if s.respond_to? :specification_version=
+  s.specification_version = 3 if s.respond_to? :specification_version=
 
   s.required_rubygems_version = Gem::Requirement.new(\">= 0\") if s.respond_to? :required_rubygems_version=
   s.authors = [\"A User\"]
@@ -680,9 +684,15 @@ end
   s.summary = %q{this is a summary}
   s.test_files = [\"test/suite.rb\"]
 
-  s.add_runtime_dependency(%q<rake>, [\"> 0.4\"])
-  s.add_runtime_dependency(%q<jabber4r>, [\"> 0.0.0\"])
-  s.add_runtime_dependency(%q<pqa>, [\"> 0.4\", \"<= 0.6\"])
+  if s.respond_to? :specification_version and s.specification_version >= 3 then
+    s.add_runtime_dependency(%q<rake>, [\"> 0.4\"])
+    s.add_runtime_dependency(%q<jabber4r>, [\"> 0.0.0\"])
+    s.add_runtime_dependency(%q<pqa>, [\"> 0.4\", \"<= 0.6\"])
+  else
+    s.add_dependency(%q<rake>, [\"> 0.4\"])
+    s.add_dependency(%q<jabber4r>, [\"> 0.0.0\"])
+    s.add_dependency(%q<pqa>, [\"> 0.4\", \"<= 0.6\"])
+  end
 end
 "
 
